--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@angular/router": "5.0.0",
+    "angular-in-memory-web-api": "^0.5.1",
     "chartist": "^0.11.0",
     "core-js": "2.4.1",
     "hammerjs": "2.0.8",
